The backtrackParenthesesOnceEnd function should store the start position of the subpattern's non-greedy match at the place of the subpattern's start index in the output array instead of the place of the subpattern's end index. Add layout test for checking of non-greedy matching of subpattern in regular expressions. https://bugs.webkit.org/show_bug.cgi?id=39289

Patch by Peter Varga <pvarga@inf.u-szeged.hu> on 2010-05-19
Reviewed by Darin Adler.

JavaScriptCore:

* yarr/RegexInterpreter.cpp:
(JSC::Yarr::Interpreter::backtrackParenthesesOnceEnd):

LayoutTests:

* fast/js/regexp-non-greedy-parentheses-expected.txt: Added.
* fast/js/regexp-non-greedy-parentheses.html: Added.
* fast/js/script-tests/regexp-non-greedy-parentheses.js: Added.



Canonical link: https://commits.webkit.org/50884@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@59766 268f45cc-cd09-0410-ab3c-d52691b4dbfc