JavaScriptCore/yarr/RegexInterpreter.cpp
@@ -674,7 +674,7 @@ public:
                 backTrack->inParentheses = 1;
                 if (term.capture()) {
                     unsigned subpatternId = term.atom.subpatternId;
-                    output[(subpatternId << 1) + 1] = input.getPos() + term.inputPosition;
+                    output[subpatternId << 1] = input.getPos() + term.inputPosition;
                 }
                 context->term -= term.atom.parenthesesWidth;
                 return true;
